--- a/src/app/user-pages/login/login.component.scss
+++ b/src/app/user-pages/login/login.component.scss
@@ -1,4 +1,3 @@
-
 /* BASIC */
 
 html {
@@ -6,13 +5,13 @@ html {
   }
   
   body {
-    font-family: "Poppins", sans-serif;
+    font-family: 'Poppins', sans-serif;
     height: 100vh;
   }
   
   a {
     color: #92badd;
-    display:inline-block;
+    display: inline-block;
     text-decoration: none;
     font-weight: 400;
   }
@@ -22,23 +21,41 @@ html {
     font-size: 16px;
     font-weight: 600;
     text-transform: uppercase;
-    display:inline-block;
-    margin: 40px 8px 10px 8px; 
+    display: inline-block;
+    margin: 40px 8px 10px 8px;
     color: #cccccc;
   }
-  
-  
   
   /* STRUCTURE */
   
   .wrapper {
     display: flex;
     align-items: center;
-    flex-direction: column; 
+    flex-direction: column;
     justify-content: center;
     width: 100%;
     min-height: 100%;
     padding: 20px;
+  }
+  
+  .form {
+    margin-top: 50px;
+  }
+  
+  .belowLogo {
+    display: inline-block;
+    margin-top: 70px;
+    padding-bottom: 2px 2px 2px 2px;
+    font-weight: bold;
+  }
+  
+  .c {
+    width: 30px;
+    border-top: 2px solid #ff8000;
+    height: 1px;
+    position: absolute;
+    right: 228px;
+    margin-top: 9px;
   }
   
   #formContent {
@@ -47,25 +64,22 @@ html {
     background: #fff;
     padding: 30px;
     width: 90%;
-    max-width: 450px;
+    max-width: 500px;
     position: relative;
-    padding: 0px;
-    -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-    box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+    -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
     text-align: center;
-    margin: 20vh;
   }
   
-  #formFooter {
-    background-color: #f6f6f6;
+  #formHeader {
+    background-color: #2f67b1;
     border-top: 1px solid #dce8f1;
-    padding: 25px;
+    padding: 45px;
     text-align: center;
-    -webkit-border-radius: 0 0 10px 10px;
-    border-radius: 0 0 10px 10px;
+    -webkit-border-radius: 10px 10px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
+    margin: -30px;
   }
-  
-  
   
   /* TABS */
   
@@ -78,14 +92,14 @@ html {
     border-bottom: 2px solid #5fbae9;
   }
   
-  
-  
   /* FORM TYPOGRAPHY*/
   
-  input[type=button], input[type=submit], input[type=reset]  {
+  input[type='button'],
+  input[type='submit'],
+  input[type='reset'] {
     background-color: #56baed;
     border: none;
-    color: white;
+    color: black;
     padding: 15px 80px;
     text-align: center;
     text-decoration: none;
@@ -93,8 +107,8 @@ html {
     text-transform: uppercase;
     font-size: 13px;
     width: 85%;
-    -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+    -webkit-box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
+    box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
     margin: 5px 20px 40px 20px;
@@ -103,14 +117,17 @@ html {
     -ms-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    
   }
   
-  input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
+  input[type='button']:hover,
+  input[type='submit']:hover,
+  input[type='reset']:hover {
     background-color: #39ace7;
   }
   
-  input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
+  input[type='button']:active,
+  input[type='submit']:active,
+  input[type='reset']:active {
     -moz-transform: scale(0.95);
     -webkit-transform: scale(0.95);
     -o-transform: scale(0.95);
@@ -118,37 +135,40 @@ html {
     transform: scale(0.95);
   }
   
-  input[type=text] {
-    background-color: #f6f6f6;
-    border: none;
-    color: #0d0d0d;
+  input[type='text'],
+  input[type='password'] {
+    background: transparent;
+    border-bottom: 1px solid black;
+    background-image: linear-gradient(#000, #000);
+    background-position: bottom 5px center;
+    background-size: calc(100% - 10px) 2px;
+    background-repeat: no-repeat;
+    color: black;
+    border: 1px ;
+    outline: none;
+    // height: 30px;
     padding: 15px 32px;
-    text-align: center;
+    text-align: left;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 5px;
-    width: 85%;
-    border: 2px solid #f6f6f6;
+    margin: 10px;
+    width: 70%;
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -ms-transition: all 0.5s ease-in-out;
     -o-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
-    -webkit-border-radius: 5px 5px 5px 5px;
-    border-radius: 5px 5px 5px 5px;
   }
   
-  input[type=text]:focus {
+  /* input[type='text']:focus {
     background-color: #fff;
     border-bottom: 2px solid #5fbae9;
-  }
+  } */
   
-  input[type=text]:placeholder {
+  input[type='text']:placeholder {
     color: #cccccc;
   }
-  
-  
   
   /* ANIMATIONS */
   
@@ -189,23 +209,44 @@ html {
   }
   
   /* Simple CSS3 Fade-in Animation */
-  @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-  @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-  @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+  @-webkit-keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  @-moz-keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
   
   .fadeIn {
-    opacity:0;
-    -webkit-animation:fadeIn ease-in 1;
-    -moz-animation:fadeIn ease-in 1;
-    animation:fadeIn ease-in 1;
+    opacity: 0;
+    -webkit-animation: fadeIn ease-in 1;
+    -moz-animation: fadeIn ease-in 1;
+    animation: fadeIn ease-in 1;
   
-    -webkit-animation-fill-mode:forwards;
-    -moz-animation-fill-mode:forwards;
-    animation-fill-mode:forwards;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
   
-    -webkit-animation-duration:1s;
-    -moz-animation-duration:1s;
-    animation-duration:1s;
+    -webkit-animation-duration: 1s;
+    -moz-animation-duration: 1s;
+    animation-duration: 1s;
   }
   
   .fadeIn.first {
@@ -245,7 +286,7 @@ html {
     width: 0;
     height: 2px;
     background-color: #56baed;
-    content: "";
+    content: '';
     transition: width 0.2s;
   }
   
@@ -253,49 +294,47 @@ html {
     color: #0d0d0d;
   }
   
-  .underlineHover:hover:after{
+  .underlineHover:hover:after {
     width: 100%;
   }
-
-
-  .button-property  {
-    background-color: #56baed;
+  
+  .button-property {
+    background-color: #ff8000;
     border: none;
-    color: white;
+    color: black;
     padding: 15px 80px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    text-transform: uppercase;
-    font-size: 13px;
-    width: 85%;
-    -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+    // text-transform: uppercase;
+    font-size: 17px;
+    // font-weight: bold;
+    width: 50%;
+    -webkit-box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
+    box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
     -webkit-border-radius: 5px 5px 5px 5px;
-    border-radius: 5px 5px 5px 5px;
-    margin: 5px 20px 40px 20px;
+    border-radius: 25px;
+    margin: 40px 20px 40px 20px;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -ms-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    
   }
-  
-  
   
   /* OTHERS */
   
   *:focus {
-      outline: none;
-  } 
+    outline: none;
+  }
   
   #icon {
-    width:60%;
+    width: 25%;
+    margin: -23px;
+    border-radius: 50%;
   }
   
-  .full-width{
-      flex: 1;
+  .full-width {
+    flex: 1;
   }
-
   
