--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -3,8 +3,7 @@
     <a class="navbar-brand brand-logo" href="index.html">
       <!-- <img src="assets/images/logo.svg" alt="logo" class="logo-dark" />
       <img src="assets/images/logo-light.svg" alt="logo-light" class="logo-light"> -->
-      <img src="" alt="logo" class="logo-dark" />
-      <img src="" alt="logo-light" class="logo-light">
+      <img src="assets/images/login-logo.png" alt="logo" />
     </a>
     <!-- <a class="navbar-brand brand-logo-mini" href="index.html"><img src="assets/images/logo-mini.svg" alt="logo" /></a> -->
     <a class="navbar-brand brand-logo-mini" href="index.html"><img src="" alt="logo" /></a>
@@ -16,55 +15,11 @@
   <div class="navbar-menu-wrapper d-flex align-items-center">
     <h5 class="mb-0 font-weight-medium d-none d-lg-flex" translate>Welcome to TallyGO!</h5>
     <ul class="navbar-nav navbar-nav-right">
-      <form class="search-form d-none d-md-block" action="#">
-        <i class="icon-magnifier"></i>
-        <input type="search" class="form-control" placeholder="{{'Search Here' | translate }}"
-          title="{{'Search Here' | translate }}">
-      </form>
-      <li class="nav-item"><a href="#" class="nav-link"><i class="icon-basket-loaded"></i></a></li>
-      <li class="nav-item"><a href="#" class="nav-link"><i class="icon-chart"></i></a></li>
-      <li class="nav-item dropdown" ngbDropdown>
-        <a class="nav-link count-indicator message-dropdown" id="messageDropdown" aria-expanded="false"
-          ngbDropdownToggle>
-          <i class="icon-speech"></i>
-          <span class="count">7</span>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list pb-0"
-          aria-labelledby="messageDropdown" ngbDropdownMenu>
-          <a class="dropdown-item py-3">
-            <p class="mb-0 font-weight-medium float-left" translate>You have 7 unread mails</p>
-            <span class="badge badge-pill badge-primary float-right" translate>View all</span>
-          </a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item preview-item">
-            <div class="preview-thumbnail">
-              <img src="assets/images/faces/face10.jpg" alt="image" class="img-sm profile-pic">
-            </div>
-            <div class="preview-item-content flex-grow py-2">
-              <p class="preview-subject ellipsis font-weight-medium text-dark">Marian Garner </p>
-              <p class="font-weight-light small-text" translate>The meeting is cancelled</p>
-            </div>
-          </a>
-          <a class="dropdown-item preview-item">
-            <div class="preview-thumbnail">
-              <img src="assets/images/faces/face12.jpg" alt="image" class="img-sm profile-pic">
-            </div>
-            <div class="preview-item-content flex-grow py-2">
-              <p class="preview-subject ellipsis font-weight-medium text-dark">David Grey </p>
-              <p class="font-weight-light small-text" translate>The meeting is cancelled</p>
-            </div>
-          </a>
-          <a class="dropdown-item preview-item">
-            <div class="preview-thumbnail">
-              <img src="assets/images/faces/face1.jpg" alt="image" class="img-sm profile-pic">
-            </div>
-            <div class="preview-item-content flex-grow py-2">
-              <p class="preview-subject ellipsis font-weight-medium text-dark">Travis Jenkins </p>
-              <p class="font-weight-light small-text" translate>The meeting is cancelled</p>
-            </div>
-          </a>
-        </div>
-      </li>
+
+      <p style="margin-top: 15px; margin-right: 10px;">Hello, {{username}}</p> <button
+        class="btn btn-sm btn-outline-secondary " style="border-radius:30px;color:black;font-weight: 100;"
+        (click)="logout()"><img src="assets/images/logout.png" height="15px" width="15px"> Logout </button>
+
 
     </ul>
     <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button"
