--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -51,9 +51,9 @@
       }
 
       img {
-        width: calc(#{$sidebar-width-lg} - 120px );
-        max-width: 100%;
-        height: 28px;
+        //width: calc(#{$sidebar-width-lg} - 120px );
+        //max-width: 100%;
+        height: 90px;
         margin: auto;
         vertical-align: middle;
         &.logo-light {
