--- a/src/app/user-pages/login/login.component.html
+++ b/src/app/user-pages/login/login.component.html
@@ -1,64 +1,17 @@
-<!-- <div class="d-flex align-items-center auth px-0">
-  <div class="row w-100 mx-0">
-    <div class="col-lg-4 mx-auto">
-      <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-        <div class="brand-logo">
-          <img src="assets/images/logo-light.svg" alt="logo">
-        </div>
-        <h4>Hello! let's get started</h4>
-        <h6 class="font-weight-light">Sign in to continue.</h6>
-        <form class="pt-3">
-          <div class="form-group">
-            <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Username">
-          </div>
-          <div class="form-group">
-            <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
-          </div>
-          <div class="mt-3">
-            <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" routerLink="/dashboard">SIGN IN</a>
-          </div>
-          <div class="my-2 d-flex justify-content-between align-items-center">
-            <div class="form-check">
-              <label class="form-check-label text-muted">
-                <input type="checkbox" class="form-check-input">
-                <i class="input-helper"></i>
-                Keep me signed in
-              </label>
-            </div>
-            <a href="javascript:(void)" class="auth-link text-black">Forgot password?</a>
-          </div>
-          <div class="mb-2">
-            <button type="button" class="btn btn-block btn-facebook auth-form-btn">
-              <i class="icon-social-facebook mr-2"></i>Connect using facebook
-            </button>
-          </div>
-          <div class="text-center mt-4 font-weight-light">
-            Don't have an account? <a routerLink="/register" class="text-primary">Create</a>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>   -->
-
-<div class="wrapper fadeInDown">
+<!-- <div class="wrapper fadeInDown">
   <div id="formContent">
-    <!-- Tabs Titles -->
 
-    <!-- Icon -->
     <div class="fadeIn first">
       <img src="" id="icon" alt="Tally go website logo" />
     </div>
 
-    <!-- Login Form -->
     <form>
-      <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
-      <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
-      <input type="text" id="pin" class="fadeIn fifth" name="login" placeholder="pin">
+      <input type="text" id="login" class="fadeIn second" name="login" [(ngModel)]="userName" placeholder="login">
+      <input type="text" id="password" class="fadeIn third" name="login" [(ngModel)]="password" placeholder="password">
+      <input type="text" id="pin" class="fadeIn fifth" name="login" [(ngModel)]="pin" placeholder="pin">
       <button (click)="login()" type="button" class="fadeIn fourth button-property full-width">Login</button>
     </form>
 
-    <!-- Remind Passowrd -->
     <div id="formFooter">
       <div style="float: left;">
         <a class="underlineHover" href="https://www.help.tallysolutions.com/" target="_blank">Help</a>
@@ -73,5 +26,52 @@
 
     </div>
 
+  </div>
+</div> -->
+
+
+<div class="wrapper fadeInDown">
+  <div id="formContent">
+    <!-- Tabs Titles -->
+
+    <!-- Icon -->
+    <div id="formHeader">
+
+    </div>
+    <div>
+      <img src="assets/images/login-logo.png" id="icon" alt="GO" />
+    </div>
+    <div class="belowLogo">Login to your TallyGO! </div>
+    <div class='c'></div>
+
+    <!-- Login Form -->
+    <form class="form">
+      <input type="text" id="login" class="fadeIn second" name="login" [(ngModel)]="userName"
+        placeholder="Tally.Net Email id" />
+      <span class="underline"></span>
+      <input type="password" id="password" class="fadeIn third" name="login" [(ngModel)]="password"
+        placeholder="Tally.Net Password" />
+      <span class="underline"></span>
+      <input type="password" id="pin" class="fadeIn fifth" name="login" [(ngModel)]="pin" placeholder="Pin" />
+      <button (click)="login()" type="button" class="fadeIn fourth button-property full-width">
+        Login
+      </button>
+    </form>
+
+    <!-- Remind Passowrd -->
+    <div id="formFooter">
+      <div style="float: left;">
+        <div><a class="underlineHover" style="padding: 2px 2px 2px 33px;" href="https://www.tallysolutions.com/"
+            target="_blank">Manage Account</a>&nbsp; </div>
+        <div> <a class="underlineHover" style="padding: 0px 50px 5px 2px;" href="https://www.help.tallysolutions.com/"
+            target="_blank">Help</a>
+        </div>
+      </div>
+
+      <div style="float: right; margin-top: 23px;margin-right: 21px;">
+        <a class="underlineHover" href="https://www.tallysolutions.com/" style="text-decoration: underline;"
+          target="_blank">Forgot/Reset Password?</a>
+      </div>
+    </div>
   </div>
 </div>
